# langchain-mcp-test

./: .env.example  README.md  cli.py  config.py  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  llm_client.py  tools.py  usage_tracker.py
mcp_servers/portfolio_sheets/: __init__.py  sheets_client.py
models/: __init__.py  portfolio.py
test/: test_agent.py  test_firecrawl.py  test_market_data.py  test_models.py  test_sheets_client.py
utils/: exchange_rates.py  firecrawl_client.py  market_data.py  mcp_integration.py
